# skillsmith

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config_template.yml  pyproject.toml
.github/workflows/: lint.yaml  tests.yml
skillsmith/: __init__.py  batches_process.py  config.py  models.py  prompts.py  skill_build.py  transcripts_clean.py  transcripts_fetch.py
tests/: test_config.py  test_encoding.py  test_prompts.py  test_transcripts_fetch.py
